don't use new impact effects (they have all sorts of issues)
not maintained
lots of impact effects not implemented, including snow
they were not intended for TF2 anyway

--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -418,17 +418,17 @@ alias water
 //mat_reduceparticles 0 // Use the full number of particles
 //mat_reduceparticles 1 // Reduce number of particles, but it only helps a little bit because the real performance impact comes from creating particle systems
 //cl_new_impact_effects 0 // Use the old particle system for bullet impact particles
-//cl_new_impact_effects 1 // Use the new particle system for bullet impact particles
+//cl_new_impact_effects 1 // Use the new particle system for bullet impact particles (not intended for TF2)
 //r_drawflecks 1 // Draw flecks from impacts
 //r_drawflecks 0 // Do not create particle systems when things hit surfaces, increases FPS and reduces distractions
 //cl_particle_retire_cost .0001 // Remove particles larger than this fraction of 1000 screen area
 //cl_particle_retire_cost 0 // Disable particle retirement
 
-alias particles_very_low"tf_impactwatertimeenable 1;fx_drawimpactdebris 0;fx_drawimpactdust 0;fx_drawmetalspark 0;cl_particle_batch_mode 2;tf_particles_disable_weather 1;mat_reduceparticles 1;cl_new_impact_effects 0;r_drawflecks 0;cl_particle_retire_cost .0001;alias particles_level echo particles=very_low"
-alias particles_low"tf_impactwatertimeenable 1;fx_drawimpactdebris 0;fx_drawimpactdust 0;fx_drawmetalspark 0;cl_particle_batch_mode 1;tf_particles_disable_weather 1;mat_reduceparticles 1;cl_new_impact_effects 0;r_drawflecks 0;cl_particle_retire_cost .0001;alias particles_level echo particles=low"
-alias particles_medium"tf_impactwatertimeenable 1;fx_drawimpactdebris 0;fx_drawimpactdust 0;fx_drawmetalspark 0;cl_particle_batch_mode 1;tf_particles_disable_weather 1;mat_reduceparticles 1;cl_new_impact_effects 0;r_drawflecks 1;cl_particle_retire_cost .0001;alias particles_level echo particles=medium"
-alias particles_high"tf_impactwatertimeenable 0;fx_drawimpactdebris 1;fx_drawimpactdust 1;fx_drawmetalspark 1;cl_particle_batch_mode 1;tf_particles_disable_weather 0;mat_reduceparticles 0;cl_new_impact_effects 0;r_drawflecks 1;cl_particle_retire_cost 0;alias particles_level echo particles=high"
-alias particles_ultra"tf_impactwatertimeenable 0;fx_drawimpactdebris 1;fx_drawimpactdust 1;fx_drawmetalspark 1;cl_particle_batch_mode 0;tf_particles_disable_weather 0;mat_reduceparticles 0;cl_new_impact_effects 1;r_drawflecks 1;cl_particle_retire_cost 0;alias particles_level echo particles=ultra"
+alias particles_very_low"tf_impactwatertimeenable 1;fx_drawimpactdebris 0;fx_drawimpactdust 0;fx_drawmetalspark 0;cl_particle_batch_mode 2;tf_particles_disable_weather 1;mat_reduceparticles 1;r_drawflecks 0;cl_particle_retire_cost .0001;alias particles_level echo particles=very_low"
+alias particles_low"tf_impactwatertimeenable 1;fx_drawimpactdebris 0;fx_drawimpactdust 0;fx_drawmetalspark 0;cl_particle_batch_mode 1;tf_particles_disable_weather 1;mat_reduceparticles 1;r_drawflecks 0;cl_particle_retire_cost .0001;alias particles_level echo particles=low"
+alias particles_medium"tf_impactwatertimeenable 1;fx_drawimpactdebris 0;fx_drawimpactdust 0;fx_drawmetalspark 0;cl_particle_batch_mode 1;tf_particles_disable_weather 1;mat_reduceparticles 1;r_drawflecks 1;cl_particle_retire_cost .0001;alias particles_level echo particles=medium"
+alias particles_high"tf_impactwatertimeenable 0;fx_drawimpactdebris 1;fx_drawimpactdust 1;fx_drawmetalspark 1;cl_particle_batch_mode 1;tf_particles_disable_weather 0;mat_reduceparticles 0;r_drawflecks 1;cl_particle_retire_cost 0;alias particles_level echo particles=high"
+alias particles_ultra"tf_impactwatertimeenable 0;fx_drawimpactdebris 1;fx_drawimpactdust 1;fx_drawmetalspark 1;cl_particle_batch_mode 0;tf_particles_disable_weather 0;mat_reduceparticles 0;r_drawflecks 1;cl_particle_retire_cost 0;alias particles_level echo particles=ultra"
 
 alias particles
 
