--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -886,7 +886,7 @@ mat_queue_mode -1 // Make sure ideal threading mode is on
 // ---------------
 // Controls the highest frame rate (FPS/frames per second) that the game can reach
 
-//mat_powersavingsmode 0 // Enable or disable power savings mode. It sets the FPS cap to half of the display's refresh rate.
+//mat_powersavingsmode 0 // Enable or disable power savings mode. It sets the FPS cap to half of the display refresh rate.
 //fps_max 0 // Reaching the cap within a certain timing causes CPU intrinsic pauses
 //fps_max 1000 // A safety for users who can reach the max
 
