Completion of bandwidth changes

--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -1623,8 +1623,8 @@ alias packet_size=speed"alias packet_size packet_size_speed"
 alias bandwidth=128Kbps"alias bandwidth bandwidth_128Kbps"
 alias bandwidth=192Kbps"alias bandwidth bandwidth_192Kbps"
 alias bandwidth=384Kbps"alias bandwidth bandwidth_384Kbps"
-alias bandwidth=512Kbps"alias bandwidth bandwidth_512Kbps"
-alias bandwidth=762Kbps"alias bandwidth bandwidth_762Kbps"
+alias bandwidth=0.5Mbps"alias bandwidth bandwidth_0.5Mbps"
+alias bandwidth=0.8Mbps"alias bandwidth bandwidth_0.8Mbps"
 alias bandwidth=1.0Mbps"alias bandwidth bandwidth_1.0Mbps"
 alias bandwidth=1.5Mbps"alias bandwidth bandwidth_1.5Mbps"
 alias bandwidth=2.0Mbps"alias bandwidth bandwidth_2.0Mbps"
