--- a/config/mastercomfig/cfg/pyro.cfg
+++ b/config/mastercomfig/cfg/pyro.cfg
@@ -1,5 +1,5 @@
-// The Flamethrower is lag compensated, but it does not really need the most
-// precise hitboxes, and Pyro has flares (projectiles) where fast hitboxes help
+// The Flamethrower is lag compensated, and it does not really need the most
+// precise hitboxes, but Pyro has flares and reflects where fast hitboxes help.
 // Pyro also is not a very melee centric class.
 net_projectiles;snapshot_buffer
 
