--- a/config/cfg/presets/none.cfg
+++ b/config/cfg/presets/none.cfg
@@ -1,4 +1,4 @@
 // None preset
-// Special preset which skips setting quality and sound options
+// Special preset which skips setting quality options
 
 echo"None preset selected"
