--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -548,10 +548,10 @@ alias anti_aliasing
 
 alias texture_filter_bilinear"mat_forceaniso 1;mat_trilinear 0;alias texture_filter_level echo texture_filter=bilinear"
 alias texture_filter_trilinear"mat_forceaniso 1;mat_trilinear 1;alias texture_filter_level echo texture_filter=trilinear"
-alias texture_filter_aniso_2x"mat_forceaniso 2;alias texture_filter_level echo texture_filter=aniso_2x"
-alias texture_filter_aniso_4x"mat_forceaniso 4;alias texture_filter_level echo texture_filter=aniso_4x"
-alias texture_filter_aniso_8x"mat_forceaniso 8;alias texture_filter_level echo texture_filter=aniso_8x"
-alias texture_filter_aniso_16x"mat_forceaniso 16;alias texture_filter_level echo texture_filter=aniso_16x"
+alias texture_filter_aniso2x"mat_forceaniso 2;alias texture_filter_level echo texture_filter=aniso2x"
+alias texture_filter_aniso4x"mat_forceaniso 4;alias texture_filter_level echo texture_filter=aniso4x"
+alias texture_filter_aniso8x"mat_forceaniso 8;alias texture_filter_level echo texture_filter=aniso8x"
+alias texture_filter_aniso16x"mat_forceaniso 16;alias texture_filter_level echo texture_filter=aniso16x"
 
 alias texture_filter
 
@@ -1742,10 +1742,10 @@ alias anti_aliasing=msaa_4x"alias anti_aliasing anti_aliasing_msaa_4x"
 alias anti_aliasing=msaa_8x"alias anti_aliasing anti_aliasing_msaa_8x"
 alias texture_filter=bilinear"alias texture_filter texture_filter_bilinear"
 alias texture_filter=trilinear"alias texture_filter texture_filter_trilinear"
-alias texture_filter=aniso_2x"alias texture_filter texture_filter_aniso_2x"
-alias texture_filter=aniso_4x"alias texture_filter texture_filter_aniso_4x"
-alias texture_filter=aniso_8x"alias texture_filter texture_filter_aniso_8x"
-alias texture_filter=aniso_16x"alias texture_filter texture_filter_aniso_16x"
+alias texture_filter=aniso2x"alias texture_filter texture_filter_aniso2x"
+alias texture_filter=aniso4x"alias texture_filter texture_filter_aniso4x"
+alias texture_filter=aniso8x"alias texture_filter texture_filter_aniso8x"
+alias texture_filter=aniso16x"alias texture_filter texture_filter_aniso16x"
 alias characters=very_low"alias characters characters_very_low"
 alias characters=low"alias characters characters_low"
 alias characters=medium"alias characters characters_medium"
@@ -1913,7 +1913,7 @@ alias autoexec_c"exec user/autoexec.cfg"
 alias listenserver_c"exec user/listenserver.cfg"
 
 alias run_modules"exec comfig/modules_run.cfg"
-alias modules_levels"exec comfig/modules_levels.cfg"
+alias module_levels"exec comfig/module_levels.cfg"
 alias apply_user"modules_c;run_modules;autoexec_c"
 alias restore_preset"exec comfig/comfig.cfg;preset;run_modules"
 alias restore_config"exec autoexec.cfg"
