--- a/config/templates/modules/modules.cfg
+++ b/config/templates/modules/modules.cfg
@@ -86,8 +86,8 @@
 //anti_aliasing=msaa_8x
 // msaa_8x, msaa_4x, msaa_2x, off
 
-//texture_filter=aniso_16x
-// aniso_16x, aniso_8x, aniso_4x, aniso_2x, trilinear, bilinear
+//texture_filter=aniso16x
+// aniso16x, aniso8x, aniso4x, aniso2x, trilinear, bilinear
 
 //characters=ultra
 // ultra, high, medium_high, medium, low, very_low
