--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -43,7 +43,7 @@ jobs:
       run:
         sleep 240
     - name: Update from Remote
-      run: git fetch --tags
+      run: git fetch --tags -f
     - name: Build docs (latest)
       if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/release' }}
       run: mike deploy --no-redirect -up $(git describe --tags --abbrev=0) latest page
