Revert "bump up default bandwidth to 100k"
This reverts commit e63c866b3fabe7230f32947687a6a2b4aa668aec.

--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -146,8 +146,8 @@ net_splitpacket_maxrate 50000 // Lower split packet rate to make sure they are t
 alias bandwidth_128Kbps"rate 16000;alias bandwidth_level echo bandwidth=128Kbps"
 alias bandwidth_192Kbps"rate 24576;alias bandwidth_level echo bandwidth=192Kbps"
 alias bandwidth_384Kbps"rate 49152;alias bandwidth_level echo bandwidth=384Kbps"
-alias bandwidth_0.5Mbps"rate 65536;alias bandwidth_level echo bandwidth=0.5Mbps"
-alias bandwidth_0.8Mbps"rate 100000;alias bandwidth_level echo bandwidth=0.8Mbps"
+alias bandwidth_512Kbps"rate 65536;alias bandwidth_level echo bandwidth=512Kbps"
+alias bandwidth_762Kbps"rate 80000;alias bandwidth_level echo bandwidth=762Kbps"
 alias bandwidth_1.0Mbps"rate 131072;alias bandwidth_level echo bandwidth=1.0Mbps"
 alias bandwidth_1.5Mbps"rate 196608;alias bandwidth_level echo bandwidth=1.5Mbps"
 alias bandwidth_2.0Mbps"rate 262144;alias bandwidth_level echo bandwidth=2.0Mbps"
@@ -157,7 +157,7 @@ alias bandwidth_4.0Mbps"rate 524288;alias bandwidth_level echo bandwidth=4.0Mbps
 alias bandwidth_6.0Mbps"rate 786432;alias bandwidth_level echo bandwidth=6.0Mbps"
 alias bandwidth_8.0Mbps"rate 1048576;alias bandwidth_level echo bandwidth=8.0Mbps"
 
-alias bandwidth bandwidth_0.8Mbps
+alias bandwidth bandwidth_762Kbps
 
 alias mm_queue_casual"quit smoking"
 
