use rate minimum as default

--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -140,7 +140,7 @@ alias packet_size packet_size_speed
 
 net_maxcleartime 0 // No need to check for our limit, since cmdrate is the bound
 //rate 196608 // Rate used for server communication, delays packets based on this value and packet size
-net_splitpacket_maxrate 50000 // Lower split packet rate to make sure they are transmitted properly
+net_splitpacket_maxrate 131072 // Lower split packet rate to make sure they are transmitted properly
 //net_splitpacket_maxrate 1048576 // Use rate as bound for split packets
 
 alias bandwidth_128Kbps"rate 16000;alias bandwidth_level echo bandwidth=128Kbps"
@@ -157,7 +157,7 @@ alias bandwidth_4.0Mbps"rate 524288;alias bandwidth_level echo bandwidth=4.0Mbps
 alias bandwidth_6.0Mbps"rate 786432;alias bandwidth_level echo bandwidth=6.0Mbps"
 alias bandwidth_8.0Mbps"rate 1048576;alias bandwidth_level echo bandwidth=8.0Mbps"
 
-alias bandwidth bandwidth_762Kbps
+alias bandwidth bandwidth_1.0Mbps
 
 alias mm_queue_casual"quit smoking"
 
