some more 9.7.0 changes

--- a/config/mastercomfig/cfg/comfig/echo.cfg
+++ b/config/mastercomfig/cfg/comfig/echo.cfg
@@ -1,5 +1,5 @@
 // Logo setup
-alias startlogo"echo"---------------|||||--------------------";l1"
+alias l0"echo"---------------|||||--------------------";l1"
 alias l1"echo"----------||||||||||--------------------";l2"
 alias l2"echo"-------||||||||-------------------------";l3"
 alias l3"echo"-----||||||-----||||||||----------------";l4"
@@ -45,7 +45,7 @@ echo""
 echo""
 echo""
 echo"  ##################################################"
-echo"  This release took 10 hours to produce."
+echo"  This release took 20 hours to produce."
 echo"  If you like the work I do, consider supporting me!"
 echo""
 echo"  docs.mastercomfig.com/page/support_me"
