tweaks based on final review for release

--- a/config/mastercomfig/cfg/comfig/very_low_reset.cfg
+++ b/config/mastercomfig/cfg/comfig/very_low_reset.cfg
@@ -6,6 +6,8 @@ hud_freezecamhide 0
 tf_hud_target_id_disable_floating_health 0
 tf_simple_disguise_menu 0
 tf_use_min_viewmodels 0
+tf_contract_competitive_show 2
+tf_contract_progress_show 1
 viewmodel_fov 54
 
 echo"Very Low preset settings have been reset"
