--- a/config/templates/modules/modules.cfg
+++ b/config/templates/modules/modules.cfg
@@ -37,8 +37,8 @@
 //packet_size=speed
 // speed, saver, conservative, small
 
-//bandwidth=0.8Mbps
-// 8.0Mbps, 6.0Mbps, 4.0Mbps, 3.0Mbps, 2.5Mbps, 2.0Mbps, 1.5Mbps, 1.0Mbps, 0.8Mbps, 0.5Mbps, 384Kbps, 192Kbps, 128Kbps
+//bandwidth=1.0Mbps
+// 8.0Mbps, 6.0Mbps, 4.0Mbps, 3.0Mbps, 2.5Mbps, 2.0Mbps, 1.5Mbps, 1.0Mbps, 762Kbps, 512Kbps, 384Kbps, 192Kbps, 128Kbps
 
 //download=auto
 // auto, all, nosounds, mapsonly, none
