--- a/config/templates/modules/modules.cfg
+++ b/config/templates/modules/modules.cfg
@@ -147,8 +147,8 @@
 //hud_player_model=on
 // on, off
 
-//hud_contracts=all
-// active, all, hide
+//hud_contracts=auto
+// active, all, hide, auto
 
 //hud_panels=high
 // high, low, off
