Also update config_template.cfg

--- a/config/templates/config/config_template.cfg
+++ b/config/templates/config/config_template.cfg
@@ -94,7 +94,7 @@ net_maxroutable 1200;net_maxfragments 1200 // Use max recommended packet size by
 
 net_maxcleartime 0 // No need to check for our limit, since cmdrate is the bound
 //rate 196608 // Rate used for server communication, delays packets based on this value and packet size
-net_splitpacket_maxrate 131072 // Lower split packet rate to make sure they are transmitted properly
+net_splitpacket_maxrate 131072 // Max split packet rate
 //net_splitpacket_maxrate 1048576 // Use rate as bound for split packets
 
 rate 131072 // 1.0Mbps game bandwidth
@@ -585,7 +585,7 @@ mat_queue_mode -1 // Make sure ideal threading mode is on
 // ---------------
 // Controls the highest frame rate (FPS/frames per second) that the game can reach
 
-//mat_powersavingsmode 1 // Set the FPS cap to half of refresh rate.
+//mat_powersavingsmode 1 // Set the FPS cap to half of refresh rate
 //fps_max 0 // Reaching the cap within a certain timing causes CPU intrinsic pauses
 fps_max 1000 // A safety for users who can reach the max
 
@@ -757,7 +757,7 @@ tf_backpack_page_button_delay .25 // Decrease button delay for moving items
 // -------------------
 // Killstreak messages from weapons
 
-//cl_hud_killstreak_display_alpha 100 // Adjust the translucency of the killstreak banner (0 to 255)
+//cl_hud_killstreak_display_alpha 120 // Adjust the translucency of the killstreak banner (0 to 255)
 //cl_hud_killstreak_display_alpha 255 // Disable transparency
 //cl_hud_killstreak_display_fontsize 0 // Killstreak font size (0 to 2)
 //cl_hud_killstreak_display_time 2 // Killstreak display time in seconds
@@ -803,7 +803,7 @@ cl_vote_ui_active_after_voting 1 // Keep the vote UI active after voting to see 
 //hud_achievement_tracker 1 // Enable achievement tracker
 //hud_achievement_count 8 // Max achievements shown on HUD
 //hud_achievement_count_engineer 3 // Max achievements shown on HUD when playing as Engineer
-hud_achievement_description 0;hud_achievement_tracker 0;hud_achievement_count 0;hud_achievement_count_engineer 0;hud_achievement_glowtime 0 // Disable HUD tracking
+//hud_achievement_description 0;hud_achievement_tracker 0;hud_achievement_count 0;hud_achievement_count_engineer 0;hud_achievement_glowtime 0 // Disable HUD tracking
 
 // ------------
 // '-- Info --'
