documentation improvements/updates

--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -33,6 +33,7 @@ net_chokeloop 1 // Early check for multiplayer
 sv_lan 1 // Protect local servers
 cl_localnetworkbackdoor 0 // Fast path to skip backdoor
 host_limitlocal 1 // Prevent excess work on local
+//cl_predict 1 // Force prediction back on during matches (https://github.com/ValveSoftware/Source-1-Games/issues/2618) (does not work in autoexec)
 
 // Directly forward string cmds to server for lower latency
 alias resetclass"cmd resetclass"
@@ -649,6 +650,7 @@ alias decals_models
 // ------------------
 // Decals placed by the map author
 
+// Note: fully removing map decals does not work in autoexec
 //r_renderoverlayfragment 1 // Enable overlays to see some decal based logos and posters on walls
 //r_renderoverlayfragment 0 // Disable overlays, small performance increase
 //r_overlayfadeenable 0 // Fade map decals based on globally set distance
@@ -990,7 +992,7 @@ alias vsync
 //cl_software_cursor 1 // Uses a stylized cursor handled by the game instead of the OS
 //tf_scoreboard_mouse_mode 2 // Use mouse mode on scoreboard. 0 - disabled, 1 - always, 2 - on click (MOUSE2).
 //tf_scoreboard_alt_class_icons 1 // Alternate class icons on the scoreboard
-//tf_use_match_hud 1 // Show the top player bar on all servers
+//tf_use_match_hud 1 // Show the top player bar on all servers (does not work in autoexec)
 //tf_mm_dashboard_slide_panel_step 10 // Change the horizontal offset of the primary matchmaking panel
 tf_dashboard_slide_time .1 // Time in seconds for dashboard transitions
 tf_item_inspect_model_auto_spin 1 // Auto spin items in the inspect view
@@ -1550,7 +1552,7 @@ snd_legacy_surround 0 // Turn off legacy surround sound pathway
 
 //snd_cull_duplicates 0 // Do not skip playing duplicate sounds
 //snd_cull_duplicates 1 // Only play one of each sound at a time
-//voice_steal 2 // Reuse unimportant sound channels, increases FPS and sound quality
+//voice_steal 2 // Reuse unimportant sound channels, increases FPS and sound quality (does not work in autoexec)
 snd_noextraupdate 1 // Do not update sound twice
 //snd_defer_trace 1 // Defer DSP spatialization with tracing to the next frame
 //snd_defer_trace 0 // Immediately trace on the first frame
