--- a/config/mastercomfig/cfg/spy.cfg
+++ b/config/mastercomfig/cfg/spy.cfg
@@ -1,6 +1,5 @@
 // Spy is a hitscan and melee centric class, but the parameters for a backstab require more sensitive timing.
-// It is not still clear what exactly Spy needs to be successful, but a low interp seems to be a 
-// good choice for now.
+// It is not still clear what exactly Spy needs to be successful, but a low interp seems to be a good choice for now.
 net_spy;snapshot_buffer
 
 run_game_overrides // Override values set every game
