colorblind commands (might make into a module)?

--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -472,6 +472,23 @@ alias post_processing_high"mat_hdr_level 2;mat_colorcorrection 1;mat_colcorrecti
 
 alias post_processing
 
+// -------------------
+// '-- Color Blind --'
+// -------------------
+// Filters for color blindness
+
+//mat_color_projection 0 // No deferred color correction
+
+alias colorblind_off"mat_color_projection 0"
+alias colorblind_protanopia"mat_color_projection 1"
+alias colorblind_deuteranopia"mat_color_projection 2"
+alias colorblind_tritanopia"mat_color_projection 3"
+alias colorblind_typical_achromatopsia"mat_color_projection 4"
+alias colorblind_protanomaly"mat_color_projection 5"
+alias colorblind_deutanomaly"mat_color_projection 6"
+alias colorblind_tritanomaly"mat_color_projection 7"
+alias colorblind_atypical_achromatopsia"mat_color_projection 8"
+
 // ---------------------------------
 // '-- Pyrovision and Romevision --'
 // ---------------------------------
