Add missing hud_contracts_auto

--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -1208,7 +1208,7 @@ alias hud_contracts_hide"tf_contract_competitive_show 0;tf_contract_progress_sho
 alias hud_contracts_all"tf_contract_competitive_show 1;tf_contract_progress_show 1;alias hud_contracts_level echo hud_contracts=all"
 alias hud_contracts_active"tf_contract_competitive_show 2;tf_contract_progress_show 2;alias hud_contracts_level echo hud_contracts=active"
 
-alias hud_contracts
+alias hud_contracts hud_contracts_auto
 
 // --------------------
 // '-- Achievements --'
