--- a/config/templates/modules/modules.cfg
+++ b/config/templates/modules/modules.cfg
@@ -148,7 +148,7 @@
 // on, off
 
 //hud_contracts=auto
-// active, all, hide, auto
+// auto, hide, all, active
 
 //hud_panels=high
 // high, low, off
