--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -1095,7 +1095,7 @@ alias htmlmotd htmlmotd_off
 
 //hud_combattext 1 // Enable damage text
 //hud_combattext_batching 1 // Collect damage into one number over a time interval
-//hud_combattext_batching_window .2 // Time in seconds to collect damage
+//hud_combattext_batching_window .2 // Time in seconds to collect damage (maximum 2 seconds)
 //hud_combattext_doesnt_block_overhead_text 1 // Allow CRIT! to appear
 //hud_combattext_healing 1 // Show healing text
 //hud_combattext_red 255 // Red value for damage text color (0 to 255)
