update custom execs

--- a/config/mastercomfig/cfg/comfig/game_overrides.cfg
+++ b/config/mastercomfig/cfg/comfig/game_overrides.cfg
@@ -12,3 +12,4 @@ alias block_game_overrides_once"alias game_overrides_once;match_hud_alias2";bloc
 // Game overrides
 game_overrides // Run aliased game overrides
 game_overrides_c // Run custom aliased game overrides
+exec app/game_overrides.cfg // Run app game overrides
