--- a/config/mastercomfig/cfg/heavyweapons.cfg
+++ b/config/mastercomfig/cfg/heavyweapons.cfg
@@ -4,3 +4,5 @@ net_hitscan;snapshot_buffer
 run_game_overrides // Override values set every game
 
 class_config_heavyweapons
+
+exec app/heavyweapons.cfg
