--- a/config/mastercomfig/cfg/soldier.cfg
+++ b/config/mastercomfig/cfg/soldier.cfg
@@ -6,3 +6,5 @@ net_projectiles;snapshot_buffer
 run_game_overrides // Override values set every game
 
 class_config_soldier
+
+exec app/soldier.cfg
