change hud_avatars default to everyone
fix some missing settings from full autoexec

--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -1066,7 +1066,7 @@ alias hud_avatars_off"tf_hud_target_id_show_avatars 0;alias hud_avatars_level ec
 alias hud_avatars_everyone"tf_hud_target_id_show_avatars 1;alias hud_avatars_level echo hud_avatars=everyone"
 alias hud_avatars_friends"tf_hud_target_id_show_avatars 2;alias hud_avatars_level echo hud_avatars=friends"
 
-alias hud_avatars hud_avatars_friends
+alias hud_avatars hud_avatars_everyone
 
 alias match_hud_alias"tf_use_match_hud 0;alias match_hud_level echo match_hud=off"
 alias match_hud_alias2"alias match_hud_off match_hud_alias"
