--- a/config/templates/config/config_template.cfg
+++ b/config/templates/config/config_template.cfg
@@ -635,7 +635,7 @@ gl_paircache_rows_lg2 11 // Expand number of shader cache rows, improves cache h
 // General/misc HUD settings
 
 //cl_hud_playerclass_use_playermodel 1 // Enable live player model in HUD
-//cl_hud_playerclass_use_playermodel 0 // Disable live player model in HUD
+cl_hud_playerclass_use_playermodel 0 // Disable live player model in HUD
 //cl_hud_minmode 1 // HUD min mode
 //hud_fastswitch 1 // Weapon switch behavior:
                    // 0 - PC Buckets
@@ -655,12 +655,12 @@ gl_paircache_rows_lg2 11 // Expand number of shader cache rows, improves cache h
 //tf_scoreboard_alt_class_icons 1 // Alternate class icons on the scoreboard
 //tf_use_match_hud 1 // Show the top player bar on all servers
 //tf_mm_dashboard_slide_panel_step 10 // Change the horizontal offset of the primary matchmaking panel
-tf_dashboard_slide_time .1 // Time in seconds for dashboard transitions
+tf_dashboard_slide_time 0 // Time in seconds for dashboard transitions
 //tf_item_inspect_model_auto_spin 1 // Auto spin items in the inspect view
-//tf_item_inspect_model_auto_spin 0 // Do not auto spin items in the inspect view
+tf_item_inspect_model_auto_spin 0 // Do not auto spin items in the inspect view
 //tf_item_inspect_model_spin_rate 30 // Rate at which items spin in the inspect view
 //tf_quest_map_tuner_wobble_magnitude .01 // Enable red tuner at the bottom
-//tf_quest_map_tuner_wobble_magnitude 0 // Disable the red tuner on the contracker
+tf_quest_map_tuner_wobble_magnitude 0 // Disable the red tuner on the contracker
 //tf_build_menu_controller_mode 1 // Use controller style engineer build menu
 //tf_disguise_menu_controller_mode 1 // Controller disguise menu
 //tf_simple_disguise_menu 0 // Concise disguise menu
@@ -674,13 +674,13 @@ tf_halloween_bonus_ducks_cooldown 20 // Delay in seconds before BONUS DUCKS soun
 //tf_rd_finale_beep_time 10 // Beep time during robot destruction victory
 tf_hud_show_servertimelimit 1 // Show server map time
 //scr_centertime 5 // Time for center text on servers
-//tf_hud_target_id_alpha 100 // Transparency of target ID
+tf_hud_target_id_alpha 255 // Transparency of target ID
 //tf_hud_target_id_disable_floating_health 0 // Show floating health bar
 //tf_hud_target_id_disable_floating_health 1 // Hide floating health bar
 //hud_medichealtargetmarker 1 // Shows Medi Gun heal target with a small marker
 //tf_healthicon_height_offset 10 // Offset of heath icon
 //tf_hud_target_id_offset 0 // Vertical offset of target ID
-//tf_hud_target_id_show_avatars 2 // Show avatars: 0 - never, 1 - from everyone, 2 - from friends.
+tf_hud_target_id_show_avatars 0 // Show avatars: 0 - never, 1 - from everyone, 2 - from friends.
 //tf_spectator_target_location 0 // 0 - center (default)
                                  // 1 - bottom left
                                  // 2 - bottom center
