--- a/config/templates/modules/modules.cfg
+++ b/config/templates/modules/modules.cfg
@@ -153,7 +153,7 @@
 //hud_panels=high
 // high, low, off
 
-//hud_avatars=friends
+//hud_avatars=everyone
 // friends, everyone, off
 
 //match_hud=on
