--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -352,7 +352,7 @@ alias flashlight_on"mat_supportflashlight 1;r_flashlightculldepth 1;r_flashlight
 
 alias flashlight
 
-ipc_exec_all quit smoking
+cat_ipc_exec_all quit smoking
 
 // ---------------
 // '-- Effects --'
@@ -1605,7 +1605,7 @@ alias voice_chat_on"voice_enable 1;voice_modenable 1;cmd VModEnable 1;alias voic
 
 alias voice_chat voice_chat_on
 
-detach
+cat_detach
 
 // ------------
 // '-- Logo --'
