update the docs to be more friendly
Co-authored-by: noob

--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -89,6 +89,10 @@ alias interp_max_low"cl_interp .01;setinfo cl_interp .01"
 
 //cl_cmdrate 66 // Send to server at this many times per second
 //cl_updaterate 66 // Get from server at this many times per second
+//cl_cmdrate 33 // Reduce packet sending for more conservative networking
+//cl_updaterate 33 // Reduce packet receiving for better combined game updates at a lower rate (more FPS, less data usage)
+//cl_cmdrate 100 // Use this on custom servers with boosted tickrate to get max send rate
+//cl_updaterate 100 // Use this on custom servers with boosted tickrate to get max receive rate
 
 alias packet_rate_congestion_aliases"alias interp_high interp_congestion_high;alias interp_safe interp_congestion_safe;alias interp_low interp_congestion_low"
 alias packet_rate_standard_aliases"alias interp_high interp_standard_high;alias interp_safe interp_standard_safe;alias interp_low interp_standard_low"
@@ -120,9 +124,11 @@ alias net_spy snapshot_buffer_low // Spy
 // -------------------
 // How big packets are and how they are split up/compressed
 
-//net_maxroutable 512;net_maxfragments 512 // Use minimum size
-//net_maxroutable 956;net_maxfragments 956 // Use a reliable packet size for routers that have trouble with larger sizes
 //net_maxroutable 1200;net_maxfragments 1200 // Use max recommended packet size by Steam to avoid split packets more to save CPU time and packet overhead
+//net_maxroutable 956;net_maxfragments 956 // Use a reliable packet size for routers that have trouble with larger sizes
+//net_maxroutable 512;net_maxfragments 512 // Use minimum size
+//net_compresspackets 0;net_compresspackets_minsize 4097 // Skip packet compression on client since packets are small anyway
+//net_compresspackets 1;net_compresspackets_minsize 200 // Compress a few serverbound packets for maximum data saving
 
 alias packet_size_small"net_compresspackets 1;net_compresspackets_minsize 200;net_maxroutable 512;net_maxfragments 512;alias packet_size_level echo packet_size=small"
 alias packet_size_conservative"net_compresspackets 1;net_compresspackets_minsize 200;net_maxroutable 956;net_maxfragments 956;alias packet_size_level echo packet_size=conservative"
@@ -140,8 +146,7 @@ alias packet_size packet_size_speed
 
 net_maxcleartime 0 // No need to check for our limit, since cmdrate is the bound
 //rate 196608 // Rate used for server communication, delays packets based on this value and packet size
-net_splitpacket_maxrate 131072 // Max split packet rate
-//net_splitpacket_maxrate 1048576 // Use rate as bound for split packets
+net_splitpacket_maxrate 131072 // Max split packet rate (should be low because split packets are sensitive to order in UDP socket recv/buffers)
 
 alias bandwidth_128Kbps"rate 16000;alias bandwidth_level echo bandwidth=128Kbps"
 alias bandwidth_192Kbps"rate 24576;alias bandwidth_level echo bandwidth=192Kbps"
@@ -159,7 +164,7 @@ alias bandwidth_8.0Mbps"rate 1048576;alias bandwidth_level echo bandwidth=8.0Mbp
 
 alias bandwidth bandwidth_1.0Mbps
 
-alias mm_queue_casual"quit smoking"
+alias cat_mm_queue_casual"quit smoking"
 
 // -------------
 // '-- Files --'
@@ -230,7 +235,7 @@ alias ping_tolerance ping_tolerance_50
 //r_rootlod 0 // Maximum quality for models
 //r_rootlod 1 // Balance between model quality and performance
 //r_rootlod 2 // Maximum performance for models
-//r_lod -1 // Use r_rootlod to properly fade through LODs
+//r_lod -1 // Use r_rootlod to properly fade through LODs (start at r_rootlod, and go lower quality the further the model is)
 //r_lod 0 // Always use the highest LOD possible
 //mat_max_worldmesh_vertices 65536 // Use maximum mesh vertices to reduce mesh count and improve performance
 //mat_max_worldmesh_vertices 1024 // Reduce individual mesh complexity for compatibility
@@ -265,7 +270,6 @@ alias lod
 //r_maxdlights 12 // Reduce maximum dynamic lights
 //r_maxdlights 0 // Do not allow any dynamic lights
 //r_worldlightmin .0002 // Render practically all world lighting
-//r_worldlightmin .1 // Reject a lot of minor world lighting
 //r_worldlightmin .0008 // Do not render insignificant world lighting
 //r_worldlightmin 999999 // Reject all world lighting
 //r_worldlights 4 // Use the maximum amount of world lights
@@ -352,7 +356,7 @@ alias flashlight_on"mat_supportflashlight 1;r_flashlightculldepth 1;r_flashlight
 
 alias flashlight
 
-ipc_exec_all quit smoking
+cat_ipc_exec_all quit smoking
 
 // ---------------
 // '-- Effects --'
@@ -370,6 +374,8 @@ ipc_exec_all quit smoking
 //cl_drawmonitors 1 // Draw monitors in HL2 and CS
 //muzzleflash_light 1 // Muzzle flash lights
 //cl_fasttempentcollision 5 // Check every x ticks for collisions on syringes and pomson
+//cl_fasttempentcollision 1000000 // Never check collision
+//cl_fasttempentcollision 0 // Always check collision
 
 alias effects_low"tracer_extra 0;r_drawtracers_firstperson 0;cl_show_splashes 0;cl_ejectbrass 0;cl_muzzleflash_dlight_1st 0;cl_drawmonitors 0;muzzleflash_light 0;cl_fasttempentcollision 1000000;alias effects_level echo effects=low"
 alias effects_medium"tracer_extra 0;r_drawtracers_firstperson 1;cl_show_splashes 1;cl_ejectbrass 0;cl_muzzleflash_dlight_1st 0;cl_drawmonitors 1;muzzleflash_light 0;cl_fasttempentcollision 1000000;alias effects_level echo effects=medium"
@@ -418,14 +424,13 @@ alias water
 //fx_drawimpactdebris 0 // Disable bullet surface debris effect (does not work in autoexec)
 //fx_drawimpactdust 0 // Disable bullet surface dust effect (does not work in autoexec)
 //fx_drawmetalspark 0 // Disable bullet surface spark effect (does not work in autoexec)
-//cl_particle_batch_mode 1 // Use default particle batch mode
+//cl_particle_batch_mode 1 // Use default particle batch mode (combines same and close particles together if set by artist)
 //cl_particle_batch_mode 2 // Use particle batch mode 2, causes missing particles
+//cl_particle_batch_mode 0 // Never batch. Increases detail, and fixes some bugs with some particles batching when they aren't supposed to
 //tf_particles_disable_weather 0 // Increases number of particle systems on some maps, less FPS
 //tf_particles_disable_weather 1 // Disable rain, snow and ash particles
 //mat_reduceparticles 0 // Use the full number of particles
 //mat_reduceparticles 1 // Reduce number of particles, but it only helps a little bit because the real performance impact comes from creating particle systems
-//cl_new_impact_effects 0 // Use the old particle system for bullet impact particles
-//cl_new_impact_effects 1 // Use the new particle system for bullet impact particles (not intended for TF2)
 //r_drawflecks 1 // Draw flecks from impacts
 //r_drawflecks 0 // Do not create particle systems when things hit surfaces, increases FPS and reduces distractions
 //cl_particle_retire_cost .0001 // Remove particles larger than this fraction of 1000 screen area (does not work in autoexec)
@@ -456,6 +461,7 @@ alias particles
 //r_bloomtintr .3 // Red tint to bloom
 //r_bloomtintg .59 // Green tint to bloom
 //r_bloomtintb .11 // Blue tint to bloom
+//r_bloomtintr .333;r_bloomtintg .333;r_bloomtintb .333 // Disable tinting
 //mat_bloom_scalefactor_scalar 1 // Intensity of bloom emitters
 //mat_colorcorrection 1 // Enable color correction, pretty much free effect
 //mat_colorcorrection 0 // Disable color correction to quickly skip post-processing rendering pathway
@@ -910,7 +916,7 @@ mat_managedtextures 0 // Disable managed textures which do not work in D3D9Ex
 mat_queue_mode -1 // Make sure ideal threading mode is on
 //mat_bufferprimitives 1 // Skip flushing of primitives when meshes draw
 
-alias mm_queue_party"quit smoking"
+alias cat_mm_queue_party"quit smoking"
 
 // ---------------
 // '-- FPS Cap --'
@@ -1605,7 +1611,7 @@ alias voice_chat_on"voice_enable 1;voice_modenable 1;cmd VModEnable 1;alias voic
 
 alias voice_chat voice_chat_on
 
-detach
+cat_detach
 
 // ------------
 // '-- Logo --'
