remove excess customization options

--- a/config/mastercomfig/cfg/listenserver.cfg
+++ b/config/mastercomfig/cfg/listenserver.cfg
@@ -1,2 +1,2 @@
 mp_tournament 0 // Disables Casual/Competitive tournament mode
-listenserver_c // Run custom listenserver
+exec user/listenserver.cfg // Run custom listenserver
