remove pre/post addon system
also update full autoexec with new comfig updates

--- a/config/cfg/addons/disable-pyroland.cfg
+++ b/config/cfg/addons/disable-pyroland.cfg
@@ -1,6 +1,3 @@
 // Disable Pyroland addon
-// This file exists just for the console echo
 
-alias addon_disable-pyroland_post"exec disable-pyroland/post.cfg"
-
-alias addon_disable-pyroland"alias addon_disable-pyroland addon_disable-pyroland_post"
+echo"Disable Pyroland addon applied"
