--- a/config/cfg/addons/no-tutorial.cfg
+++ b/config/cfg/addons/no-tutorial.cfg
@@ -1,6 +1,55 @@
 // No Tutorial addon
 // Disables tutorial messages and other popups
 
-alias addon_no-tutorial_post"exec no-tutorial/post.cfg"
+cl_showhelp 0
+cl_mainmenu_updateglow 0
+cl_ask_bigpicture_controller_opt_out 1
+cl_ask_blacklist_opt_out 1
+cl_ask_favorite_opt_out 1
+sb_dontshow_maxplayer_warning 1
+replay_quitmsg_dontaskagain 1
+replay_movie_reveal_warning 0
+replay_renderqueue_first_add 1
+replay_perftip_count_enter 1
+replay_perftip_count_exit 1
+replay_perftip_count_freecam_enter 1
+replay_perftip_count_freecam_exit 1
+replay_perftip_count_freecam_exit2 1
+replay_replayeditor_rewindmsgcounter 1
+cl_promotional_codes_button_show 0
+tf_casual_welcome_hide 1
+tf_comp_welcome_hide 1
+tf_find_a_match_hint_viewed 1
+tf_coach_request_nevershowagain 1
+tf_explanations_backpackpanel 1
+tf_explanations_charinfo_armory_panel 1
+tf_explanations_charinfopanel 1
+tf_explanations_craftingpanel 1
+tf_explanations_discardpanel 1
+tf_explanations_store 1
+tf_warpaint_explanation_viewed 1
+cl_hud_playerclass_playermodel_showed_confirm_dialog 1
+tf_weapon_select_demo_time 0
+tf_hud_notification_show_count_ghost_controls 3
+tf_hud_notification_show_count_ghost_controls_no_respawn 3
+tf_hud_notification_show_count_kart_controls 3
+tf_inspect_hint_count 11
+tf_quest_map_intro_viewed 1
+tf_show_maps_details_explanation_session 1
+tf_show_preset_explanation_in_class_loadout 0
+tf_show_taunt_explanation_in_class_loadout 0
+tf_taunt_always_show_hint 0
+tf_highfive_hintcount 4
+tf_training_has_prompted_for_forums 1
+tf_training_has_prompted_for_loadout 1
+tf_training_has_prompted_for_offline_practice 1
+tf_training_has_prompted_for_options 1
+tf_training_has_prompted_for_training 1
+cl_training_class_unlock_all
+cl_training_completed_with_classes 511
+tf_romevision_skip_prompt 1
+tf_mvm_tabs_discovered 1
+tf_matchmaking_ticket_help 1
+tf_mvm_classupgradehelpcount 3
 
-alias addon_no-tutorial"alias addon_no-tutorial addon_no-tutorial_post"
+echo"No Tutorial addon applied"
