--- a/config/cfg/addons/transparent-viewmodels.cfg
+++ b/config/cfg/addons/transparent-viewmodels.cfg
@@ -4,7 +4,8 @@
 // transparent viewmodels to work. Transparent viewmodels also require
 // dxlevel 90 or higher.
 
-alias addon_transparent-vm_pre"exec transparent-viewmodels/pre.cfg"
-alias addon_transparent-vm_post"exec transparent-viewmodels/post.cfg"
+post_processing=off
+alias motion_blur motion_blur_refract
+anti_aliasing=off
 
-alias addon_transparent-vm"addon_transparent-vm_pre;alias addon_transparent-vm addon_transparent-vm_post"
+echo"Transparent Viewmodels addon applied"
