--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -461,7 +461,7 @@ alias particles
 //r_bloomtintr .3 // Red tint to bloom
 //r_bloomtintg .59 // Green tint to bloom
 //r_bloomtintb .11 // Blue tint to bloom
-//r_bloomtintr .333;r_bloomtintg .333;r_bloomtintb .333 // Disable tinting
+//r_bloomtintexponent 1;r_bloomtintr .333;r_bloomtintg .333;r_bloomtintb .333 // Disable tinting
 //mat_bloom_scalefactor_scalar 1 // Intensity of bloom emitters
 //mat_colorcorrection 1 // Enable color correction, pretty much free effect
 //mat_colorcorrection 0 // Disable color correction to quickly skip post-processing rendering pathway
@@ -537,6 +537,7 @@ alias romevision
 //mat_motion_blur_strength 1 // Adjust overall blur strength
 
 alias motion_blur_off"mat_motion_blur_enabled 0;alias motion_blur_level echo motion_blur=off"
+alias motion_blur_refract"mat_motion_blur_enabled 1;mat_motion_blur_strength 0;alias motion_blur_level echo motion_blur=refract"
 alias motion_blur_low"mat_motion_blur_enabled 1;mat_motion_blur_falling_intensity 0;mat_motion_blur_percent_of_screen_max 1.5;mat_motion_blur_rotation_intensity .05;mat_motion_blur_strength .5;alias motion_blur_level echo motion_blur=low"
 alias motion_blur_high"mat_motion_blur_enabled 1;mat_motion_blur_falling_intensity 1;mat_motion_blur_falling_max 20;mat_motion_blur_falling_min 10;mat_motion_blur_percent_of_screen_max 2.5;mat_motion_blur_rotation_intensity .05;mat_motion_blur_strength .5;alias motion_blur_level echo motion_blur=high"
 
@@ -1941,11 +1942,10 @@ alias mm_override"exec comfig/mm_override.cfg"
 alias very_low_reset"exec comfig/very_low_reset.cfg"
 
 alias modules_c"exec user/modules.cfg"
-alias autoexec_c"exec user/autoexec.cfg"
 
 alias run_modules"exec comfig/modules_run.cfg"
 alias module_levels"exec comfig/module_levels.cfg"
-alias apply_user"modules_c;run_modules;autoexec_c;exec app/autoexec.cfg"
+alias apply_user"modules_c;run_modules;exec user/autoexec.cfg;exec app/autoexec.cfg"
 alias restore_preset"exec comfig/comfig.cfg;preset;run_modules"
 alias restore_config"exec autoexec.cfg"
 
@@ -1954,5 +1954,3 @@ alias game_overrides"cheap_water_override;detail_props_override;shadowlod_overri
 
 alias game_overrides_once"match_hud_once;game_overrides_once_c"
 block_game_overrides_once
-
-tr_vm_aliases
