--- a/config/cfg/addons/no-footsteps.cfg
+++ b/config/cfg/addons/no-footsteps.cfg
@@ -1,6 +1,3 @@
 // No Footsteps addon
-// This file exists just for the console echo
 
-alias addon_no-footsteps_post"exec no-footsteps/post.cfg"
-
-alias addon_no-footsteps"alias addon_no-footsteps addon_no-footsteps_post"
+echo"No Footsteps addon applied"
