--- a/config/cfg/addons/null-canceling-movement.cfg
+++ b/config/cfg/addons/null-canceling-movement.cfg
@@ -2,7 +2,17 @@
 // Prevents you from pressing two opposing directions, which causes you to stop moving
 // Credit: povohat
 
-alias addon_null-movement_pre"exec null-canceling-movement/pre.cfg"
-alias addon_null-movement_post"exec null-canceling-movement/post.cfg"
+alias +mf"-back;+forward;alias cf +forward"
+alias +mb"-forward;+back;alias cb +back"
+alias +ml"-moveright;+moveleft;alias cl +moveleft"
+alias +mr"-moveleft;+moveright;alias cr +moveright"
+alias -mf"-forward;cb;alias cf"
+alias -mb"-back;cf;alias cb"
+alias -ml"-moveleft;cr;alias cl"
+alias -mr"-moveright;cl;alias cr"
+alias cf
+alias cb
+alias cl
+alias cr
 
-alias addon_null-movement"addon_null-movement_pre;alias addon_null-movement addon_null-movement_post"
+echo"Null-Canceling Movement addon applied"
