--- a/config/templates/config/config_template.cfg
+++ b/config/templates/config/config_template.cfg
@@ -71,6 +71,10 @@ alias explode"cmd explode"
 
 cl_cmdrate 66 // Send to server at this many times per second
 cl_updaterate 66 // Get from server at this many times per second
+//cl_cmdrate 33 // Reduce packet sending for more conservative networking
+//cl_updaterate 33 // Reduce packet receiving for better combined game updates at a lower rate (more FPS, less data usage)
+//cl_cmdrate 100 // Use this on custom servers with boosted tickrate to get max send rate
+//cl_updaterate 100 // Use this on custom servers with boosted tickrate to get max receive rate
 
 //cl_interp_ratio 1;cl_interp .015 // Minimal buffering time
 cl_interp_ratio 2;cl_interp .03 // 2 snapshots interpolation buffer to avoid issues where one snapshot is dropped once in a while. Safest option for most users.
@@ -81,9 +85,11 @@ cl_interp_ratio 2;cl_interp .03 // 2 snapshots interpolation buffer to avoid iss
 // -------------------
 // How big packets are and how they are split up/compressed
 
-//net_maxroutable 512;net_maxfragments 512 // Use minimum size
-//net_maxroutable 956;net_maxfragments 956 // Use a reliable packet size for routers that have trouble with larger sizes
 net_maxroutable 1200;net_maxfragments 1200 // Use max recommended packet size by Steam to avoid split packets more to save CPU time and packet overhead
+//net_maxroutable 956;net_maxfragments 956 // Use a reliable packet size for routers that have trouble with larger sizes
+//net_maxroutable 512;net_maxfragments 512 // Use minimum size
+net_compresspackets 0;net_compresspackets_minsize 4097 // Skip packet compression on client since packets are small anyway
+//net_compresspackets 1;net_compresspackets_minsize 200 // Compress a few serverbound packets for maximum data saving
 
 // -----------------------
 // '-- Game Bandwidth  --'
@@ -143,7 +149,7 @@ tf_mm_custom_ping 50 // Ping tolerance for matchmaking
 //r_rootlod 0 // Maximum quality for models
 //r_rootlod 1 // Balance between model quality and performance
 r_rootlod 2 // Maximum performance for models
-r_lod -1 // Use r_rootlod to properly fade through LODs
+r_lod -1 // Use r_rootlod to properly fade through LODs(start at r_rootlod, and go lower quality the further the model is)
 //r_lod 0 // Always use the highest LOD possible
 //mat_max_worldmesh_vertices 65536 // Use maximum mesh vertices to reduce mesh count and improve performance
 //mat_max_worldmesh_vertices 1024 // Reduce individual mesh complexity for compatibility
@@ -171,7 +177,6 @@ r_dynamic 0 // Disable dynamic lighting (muzzle flash lighting, explosions and o
 //r_maxdlights 12 // Reduce maximum dynamic lights
 r_maxdlights 0 // Do not allow any dynamic lights
 //r_worldlightmin .0002 // Render practically all world lighting
-//r_worldlightmin .1 // Reject a lot of minor world lighting
 r_worldlightmin .0008 // Do not render insignificant world lighting
 //r_worldlightmin 999999 // Reject all world lighting
 //r_worldlights 4 // Use the maximum amount of world lights
@@ -234,7 +239,9 @@ cl_ejectbrass 0 // Bullet ejection on shots
 cl_muzzleflash_dlight_1st 0 // Disable dynamic light from muzzle flash in DoD and possibly other mods
 cl_drawmonitors 0 // Draw monitors in HL2 and CS
 muzzleflash_light 0 // Muzzle flash lights
-cl_fasttempentcollision 1000000 // Check every x ticks for collisions on syringes and pomson
+//cl_fasttempentcollision 5 // Check every x ticks for collisions on syringes and pomson
+cl_fasttempentcollision 1000000 // Never check collision
+//cl_fasttempentcollision 0 // Always check collision
 
 // -------------
 // '-- Water --'
@@ -261,14 +268,13 @@ r_WaterDrawRefraction 0 // Disable water refraction
 //fx_drawimpactdebris 0 // Disable bullet surface debris effect (does not work in autoexec)
 //fx_drawimpactdust 0 // Disable bullet surface dust effect (does not work in autoexec)
 //fx_drawmetalspark 0 // Disable bullet surface spark effect (does not work in autoexec)
-cl_particle_batch_mode 1 // Use default particle batch mode
+//cl_particle_batch_mode 1 // Use default particle batch mode (combines same and close particles together if set by artist)
 //cl_particle_batch_mode 2 // Use particle batch mode 2, causes missing particles
+//cl_particle_batch_mode 0 // Never batch. Increases detail, and fixes some bugs with some particles batching when they aren't supposed to
 //tf_particles_disable_weather 0 // Increases number of particle systems on some maps, less FPS
 tf_particles_disable_weather 1 // Disable rain, snow and ash particles
 //mat_reduceparticles 0 // Use the full number of particles
 mat_reduceparticles 1 // Reduce number of particles, but it only helps a little bit because the real performance impact comes from creating particle systems
-//cl_new_impact_effects 0 // Use the old particle system for bullet impact particles
-//cl_new_impact_effects 1 // Use the new particle system for bullet impact particles (not intended for TF2)
 //r_drawflecks 1 // Draw flecks from impacts
 r_drawflecks 0 // Do not create particle systems when things hit surfaces, increases FPS and reduces distractions
 cl_particle_retire_cost .0001 // Remove particles larger than this fraction of 1000 screen area (does not work in autoexec)
@@ -292,7 +298,7 @@ r_bloomtintexponent 1
 //r_bloomtintr .3 // Red tint to bloom
 //r_bloomtintg .59 // Green tint to bloom
 //r_bloomtintb .11 // Blue tint to bloom
-r_bloomtintr .333;r_bloomtintg .333;r_bloomtintb .333
+r_bloomtintexponent 1;r_bloomtintr .333;r_bloomtintg .333;r_bloomtintb .333 // Disable tinting
 //mat_bloom_scalefactor_scalar 1 // Intensity of bloom emitters
 //mat_colorcorrection 1 // Enable color correction, pretty much free effect
 mat_colorcorrection 0 // Disable color correction to quickly skip post-processing rendering pathway
