user -> overrides part 1 (+ a few random touchups here and there)
user is still active for now, for backwards compat. Will be removed in a future release.

* fixed spaces in file paths in the russian documentation
* fixed outdated gitattribute comments
* fixed a few words in the docs

--- a/config/cfg/addons/flat-mouse.cfg
+++ b/config/cfg/addons/flat-mouse.cfg
@@ -1,7 +1,7 @@
 // Flat Mouse addon
 // Makes mouse input "flat" with stable input, no acceleration and 1:1 zoom sensitivity
 
-m_customaccel 0 // Disable custom mouse acceleration possibly defined by user
+m_customaccel 0 // Disable custom mouse acceleration
 m_filter 0 // Mouse filtering seems to be glitchy on some systems, only use the raw input
 m_mousespeed 0 // Disable Windows mouse acceleration (-noforcemspd)
 m_mouseaccel1 0 // ^ (-noforcemaccel)
