--- a/config/mastercomfig/cfg/comfig/finalize.cfg
+++ b/config/mastercomfig/cfg/comfig/finalize.cfg
@@ -1,4 +1,4 @@
-// Runs after user configs and addons
+// Runs after user override configs, and addons
 mat_savechanges // Make sure we init next time with our material system cvars to prevent reloads
 block_antialias // Block mat_antialias
 dynamic_background // Run dynamic_background after everything
