--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -1917,17 +1917,17 @@ alias logo=on"alias logo logo_on"
 // '-- User-Overrideable Aliases --'
 // ---------------------------------
 
-alias class_config_scout"exec user/scout.cfg"
-alias class_config_soldier"exec user/soldier.cfg"
-alias class_config_pyro"exec user/pyro.cfg"
-alias class_config_demoman"exec user/demoman.cfg"
-alias class_config_heavyweapons"exec user/heavyweapons.cfg"
-alias class_config_engineer"exec user/engineer.cfg"
-alias class_config_medic"exec user/medic.cfg"
-alias class_config_sniper"exec user/sniper.cfg"
-alias class_config_spy"exec user/spy.cfg"
+alias class_config_scout"exec overrides/scout.cfg;exec user/scout.cfg"
+alias class_config_soldier"exec overrides/soldier.cfg;exec user/soldier.cfg"
+alias class_config_pyro"exec overrides/pyro.cfg;exec user/pyro.cfg"
+alias class_config_demoman"exec overrides/demoman.cfg;exec user/demoman.cfg"
+alias class_config_heavyweapons"exec overrides/heavyweapons.cfg;exec user/heavyweapons.cfg"
+alias class_config_engineer"exec overrides/engineer.cfg;exec user/engineer.cfg"
+alias class_config_medic"exec overrides/medic.cfg;exec user/medic.cfg"
+alias class_config_sniper"exec overrides/sniper.cfg;exec user/sniper.cfg"
+alias class_config_spy"exec overrides/spy.cfg;exec user/spy.cfg"
 
-alias game_overrides_c"exec user/game_overrides.cfg"
+alias game_overrides_c"exec overrides/game_overrides.cfg;exec user/game_overrides.cfg"
 
 // HUDs use mat_antialias together with a wait in the valve.rc file to force reloads. Do not let them.
 alias block_antialias"alias mat_antialias block_antialias_echo"
@@ -1941,11 +1941,12 @@ alias mm_override"exec comfig/mm_override.cfg"
 
 alias very_low_reset"exec comfig/very_low_reset.cfg"
 
-alias modules_c"exec user/modules.cfg"
+alias modules_c"exec overrides/modules.cfg;exec user/modules.cfg"
 
 alias run_modules"exec comfig/modules_run.cfg"
 alias module_levels"exec comfig/module_levels.cfg"
-alias apply_user"modules_c;run_modules;exec user/autoexec.cfg;exec app/autoexec.cfg"
+alias apply_overrides"modules_c;run_modules;exec overrides/autoexec.cfg;exec user/autoexec.cfg;exec app/autoexec.cfg"
+alias apply_user apply_overrides
 alias restore_preset"exec comfig/comfig.cfg;preset;run_modules"
 alias restore_config"exec autoexec.cfg"
 
