--- a/config/templates/modules/modules.cfg
+++ b/config/templates/modules/modules.cfg
@@ -4,9 +4,9 @@
 // HOW TO USE:
 //********************************************************************************
 // Make sure you have the most recent version of mastercomfig.
-// Place this file in tf/cfg/user
-// If you do not have a user folder, create one. Make sure it is spelled
-// exactly as 'user'
+// Place this file in tf/cfg/overrides
+// If you do not have a overrides folder, create one. Make sure it is spelled
+// exactly as 'overrides'
 //
 // To activate a module, uncomment it (delete the '//' before the module).
 // To deactivate a module, comment it out (add a '//' before the module).
