--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -1953,5 +1953,5 @@ alias restore_config"exec autoexec.cfg"
 alias run_game_overrides"exec comfig/game_overrides.cfg;lightmaps_override"
 alias game_overrides"cheap_water_override;detail_props_override;shadowlod_override;lightmaps_override"
 
-alias game_overrides_once"match_hud_once;game_overrides_once_c"
+alias game_overrides_once match_hud_once
 block_game_overrides_once
